feat: 增量分析與智慧備份功能完整實作
- 新增增量分析功能，避免重複處理已分析資料
- 實作AttendanceStateManager進行JSON狀態持久化
- 支援跨月檔案格式與智慧重疊檢測
- 完整工作日識別，僅處理有上下班記錄的日期
- 按月忘刷卡額度管理，跨分析會話持續追蹤
- 智慧備份系統，自動以時間戳記備份現有檔案
- 增強輸出格式，標示新發現與已存在問題
- 完整單元測試涵蓋(21個測試，100%通過率)
- 更新.gitignore保護使用者隱私和備份檔案
- 同步所有文檔，包含完整功能說明與使用範例

--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,14 @@ dmypy.json
 *_analysis.xlsx
 *_analysis.txt
 
+# 備份檔案（時間戳記命名的備份檔案）
+*_[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9]_[0-9][0-9][0-9][0-9][0-9][0-9].csv
+*_[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9]_[0-9][0-9][0-9][0-9][0-9][0-9].xlsx
+*_[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9]_[0-9][0-9][0-9][0-9][0-9][0-9].txt
+
+# 增量分析狀態檔案（包含使用者識別資訊）
+attendance_state.json
+
 # 除錯和測試檔案
 debug_*.html
 debug_*.py
