--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -138,8 +137,6 @@ attendance_state.json
 # 除錯和測試檔案
 debug_*.html
 debug_*.py
-test_*.py
-test_*.html
 *_response.html
 login_*.html
 *scraper*.py
@@ -174,3 +171,4 @@ Thumbs.db
 !sample-attendance-data.txt
 !sample-attendance-data_analysis.csv
 !sample-attendance-data_analysis.xlsx
+!test/
