--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,6 @@ description = Attendance analyzer with Taiwan holiday support
 [options]
 python_requires = >=3.8
 
+[options.extras_require]
+tui =
+    textual>=0.50
