--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,3 +31,23 @@ jobs:
           path: |
             coverage_report
             assets/coverage.svg
+
+  test-tui:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Install TUI extras
+        run: |
+          python -m pip install --upgrade pip
+          pip install '.[tui]'
+      - name: Smoke test TUI handoff
+        run: |
+          python - <<'PY'
+          from lib import cli
+          # should import textual and then return immediately from placeholder app
+          cli.run(['prog','sample-attendance-data.txt','csv','--tui'])
+          print('TUI smoke OK')
+          PY
