feat(tui): key bindings, recent files, and Pilot test
- Add key bindings: Enter/Esc/R/C/Q
- Step 1 shows filepath input and recent buttons
- Add recent list manager (.fhr_recent.json)
- Add Pilot test for key flow and preview limit
- Add recent tests; adjust CI to auto-close TUI smoke

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,10 +44,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install '.[tui]'
       - name: Smoke test TUI handoff
+        env:
+          FHR_TUI_AUTOCLOSE: "1"
         run: |
           python - <<'PY'
           from lib import cli
-          # should import textual and then return immediately from placeholder app
           cli.run(['prog','sample-attendance-data.txt','csv','--tui'])
           print('TUI smoke OK')
           PY
