--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,3 +2,7 @@
 requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.ruff]
+line-length = 100
+target-version = "py38"
+
