--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,10 @@ jobs:
       - name: Install linters
         run: |
           python -m pip install --upgrade pip
-          pip install ruff
+          pip install ruff black
       - name: Ruff (critical rules only)
         run: |
           ruff check --select E9,F63,F7,F82 .
+      - name: Black (format check)
+        run: |
+          black --check .
