--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,10 +40,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - name: Install TUI extras
+      - name: Install TUI deps
         run: |
           python -m pip install --upgrade pip
-          pip install '.[tui]'
+          pip install textual
       - name: Compile locales
         run: |
           python tools/po_to_mo.py
