--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,9 @@ jobs:
       - name: Ruff (critical rules only)
         run: |
           ruff check --select E9,F63,F7,F82 .
-      - name: Black (format check on new modules)
+      - name: Black (format new modules)
+        run: |
+          black tui tools
+      - name: Black (verify)
         run: |
           black --check tui tools
