--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,15 @@ jobs:
       - uses: actions/setup-python@v5
         with:
             python-version: '3.11'
-      - name: Install optional deps
+      - name: Install deps (runtime + dev)
         run: |
           python -m pip install --upgrade pip
+          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
           pip install openpyxl
+      - name: Lint (ruff) and format check (black)
+        run: |
+          if command -v ruff >/dev/null 2>&1; then ruff --version && ruff check .; else echo 'ruff missing'; fi
+          if command -v black >/dev/null 2>&1; then black --version && black --check .; else echo 'black missing'; fi
       - name: Run tests with coverage (stdlib trace)
         run: |
           make coverage
