fix: resolve E501 line length errors and add openpyxl dependency
- Fix all 39 E501 line length violations across codebase
- Break long lines in lib/excel_exporter.py, lib/filename.py, lib/holidays.py, etc.
- Split complex function signatures and method calls for readability
- Add requirements.txt with openpyxl dependency for Excel functionality
- Update requirements-dev.txt to include openpyxl for testing
- Maintain code functionality while improving readability
- All tests pass and linter shows no remaining issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ extend-exclude = [
   "venv",
 ]
 
+[tool.ruff.lint]
 # Rule selection: pyflakes + pycodestyle errors + isort + upgrades + bugbear (safe subset)
 select = ["E", "F", "I", "UP", "B"]
 ignore = [
