feat: migrate to pre-commit framework and update coverage requirements
- Replace traditional Git hooks with pre-commit framework (.pre-commit-config.yaml)
- Add comprehensive pre-commit documentation (docs/pre-commit-setup.md, docs/migrate-to-precommit.md)
- Update coverage threshold from 100% to 90% across CI, Makefile, and documentation
- Remove test execution from pre-commit hooks (CI-only testing)
- Update development workflow documentation in CLAUDE.md, README.md, AGENTS.md
- Add .gemini/ and .specify/ directories to .gitignore
- Include test coverage improvements and exception handling tests

--- a/.gitignore
+++ b/.gitignore
@@ -167,6 +167,10 @@ Thumbs.db
 *.swo
 *~
 
+# AI 代理配置目錄（工作流程相關）
+.gemini/
+.specify/
+
 # 排除但保留的檔案（用 ! 開頭）
 # ================
 !sample-attendance-data.txt
