--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 # Core dependencies for the attendance analyzer
 openpyxl>=3.1
+textual>=0.43,<0.44
+textual-forms>=0.3.0
 
 # Production dependencies are split into requirements-service.txt
 # Development dependencies are in requirements-dev.txt
